--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -45,7 +45,7 @@ body::-webkit-scrollbar {
 
 body {
   font-family: "Inter", sans-serif !important;
-  color: black;
+  color: #333333;
   font-size: 14px;
 }
 
