completed web build

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -5,7 +5,6 @@
 @tailwind utilities;
 
 @layer components {
-
   .bg-home {
     background: url("assets/img/sunset.jpg") no-repeat;
     background-size: cover;
@@ -17,8 +16,25 @@
     background-size: cover;
     background-position: center;
   }
-}
 
+  .bg-service {
+    background: url("assets/img/farmerInField.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .bg-products {
+    background: url("assets/img/cereals.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .bg-about {
+    background: url("assets/img/farmerResting.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+}
 
 ::-webkit-scrollbar {
   height: 100%;
